# chiecthuyenngoaixa

./: .gitignore  .readthedocs.yaml  LICENSE  README-vi.md  README.md  pyproject.toml  vina.py
.github/workflows/: python-publish.yml
ctnx/: __init__.py  constants.py  legacy.py  misc.py  number.py  sort.py  syllable.py  validation.py
ctnx/constants/: __init__.py  confusables.py
docs/source/: conf.py  index.rst  usage.rst
docs/source/_static/: custom.css
tests/: test_ctnx.py  test_misc.py  test_number.py  test_sort.py  test_syllable.py  test_validation.py
