[tool.poetry]
name = "chiecthuyenngoaixa"
version = "0.2.1"
description = "An utility library for processing Vietnamese texts"
authors = ["IoeCmcomc <53734763+IoeCmcomc@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/IoeCmcomc/chiecthuyenngoaixa"
keywords = ["Vietnamese", "text"]
packages = [
    { include = "ctnx" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Vietnamese",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pytest = "^7.1"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"
sphinx = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
